Fix sticky header overlapping page content
Add margin-top to main element to account for fixed header height.

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -116,6 +116,7 @@ a:hover {
 main {
   flex: 1;
   padding: 2rem 0 3rem;
+  margin-top: 3rem;
 }
 
 /* Cards */
